<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addFragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".listing.fragment.AddNewNoteFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/addTitleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/heading_of_note"
        app:layout_constraintBottom_toTopOf="@+id/newNoteHeadText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newNoteHeadText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/hint_note_heading"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:weightSum="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newNoteHeadText">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_bg_0"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="24dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/background_note_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newNoteHeadText" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_bg_1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="24dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/background_note_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newNoteHeadText" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_bg_2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="24dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/background_note_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newNoteHeadText" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_bg_3"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="24dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/background_note_3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newNoteHeadText" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_bg_4"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="24dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/background_note_4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newNoteHeadText" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_bg_5"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="24dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/background_note_5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newNoteHeadText" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <ImageButton
        android:id="@+id/newNoteButtonAccept"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/transparent"
        android:contentDescription="@string/new_hading_accepted"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/linearLayoutCompat"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"
        app:srcCompat="@drawable/ic_baseline_add_24px" />

    <ImageButton
        android:id="@+id/oldNoteUpdateButton"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/transparent"
        android:contentDescription="@string/new_hading_accepted"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/linearLayoutCompat"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"
        app:srcCompat="@drawable/ic_baseline_done_24px" />

    <ImageButton
        android:id="@+id/newNoteButtonCancel"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/transparent"
        android:contentDescription="@string/new_heading_rejected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayoutCompat"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"
        app:srcCompat="@drawable/ic_baseline_clear_24px" />
</androidx.constraintlayout.widget.ConstraintLayout>