...
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/listTypeLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:weightSum="3"
...
            android:background="@color/transparent"
            android:contentDescription="@string/linear_list"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_view_list_24px" />

        <ImageButton
            android:id="@+id/setting_view_type_grid"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/grid_list"
            android:scaleType="fitCenter"
...
